# gpis-touch-public

cpp/: CMakeLists.txt
cpp/include/: GPShape.hpp
cpp/src/: GPShape.cpp
matlab/: GPshape_Orion01.m
matlab/standalone/gp/: GPFiltering2D.m  ShapeModeling.m  evaluateAndPlot.m
mex/: CMakeLists.txt  gp_python.cpp  gp_wrapper.py  make_GPShape.m  test_gp.cpp  test_gp_wrapper.py
